--- a/examples/BiologicalSequence.ipynb
+++ b/examples/BiologicalSequence.ipynb
@@ -31,7 +31,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x180fb0a7970>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1eb361344f0>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -50,7 +50,7 @@
    "source": [
     "from signals_notebook.entities import EntityStore\n",
     "\n",
-    "experiment = EntityStore.get(\"experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f\")"
+    "experiment = EntityStore.get(\"experiment:a16616ef-e1d5-4409-a9b6-c253c359d504\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -102,7 +102,7 @@
    "source": [
     "from signals_notebook.entities.biological_sequence import BiologicalSequence\n",
     "\n",
-    "bio_sequence = BiologicalSequence.create(container=experiment, name='bio_sequence', content=content, file_extension='gb', force=True)"
+    "bio_sequence = BiologicalSequence.create(container=experiment, name='bio_sequence', content=content, force=True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -123,7 +123,7 @@
     "file = File(bio_sequence_file)\n",
     "bio_sequence_file.close()\n",
     "\n",
-    "bio_sequence_with_file_content = BiologicalSequence.create(container=experiment, name='bio_sequence', content=file.content, file_extension='gb', force=True)\n"
+    "bio_sequence_with_file_content = BiologicalSequence.create(container=experiment, name='bio_sequence', content=file.content, force=True)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "bio_sequence.name = 'bio_seq_new.gb'\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "bio_sequence.delete()\n",
